# vardy_os

./: Cargo.toml  Dockerfile  fly.toml
src/: lib.rs  main.rs
tests/: health_check.rs
