[package]
name = "vardy_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vardy_os"

[dependencies]
actix-web = "4.3.0"
reqwest = "0.11.14"
tokio = {version = "1.25.0", features = ["macros", "rt-multi-thread"]}
